--- a/01-base/css/02-maizuo.css
+++ b/01-base/css/02-maizuo.css
@@ -11,6 +11,7 @@ ul{
     height: 50px;
     line-height: 50px;
     width: 100%;
+    background: white;
 }
 ul li{
     flex:1;
@@ -18,4 +19,24 @@ ul li{
 } 
 .active{
     color: red;
+}
+
+dl{
+    height: 50px;
+    border-bottom: 1px solid gray;
+}
+
+dl dt{
+    font-size: 20px;
+}
+
+dl dd{
+    font-size: 12px;
+    color: gray;
+}
+
+input{
+    width: 300px;
+    height: 50px;
+    line-height: 50px;
 }
